--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router-dom": "^6.11.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/**/*.{tsx,ts}",
     "lint:fix": "eslint src/**/*.{tsx,ts} --fix",
